force-app/main/default/objects/Ecosystem__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Tax Engine</description>
    <inlineHelpText>Tax Engine</inlineHelpText>
    <label>Tax</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>OneSource</fullName>
            </value>
            <value>
                <fullName>Sage 300 (AccPac)</fullName>
            </value>
            <value>
                <fullName>Vertex</fullName>
            </value>
            <value>
                <fullName>WoltersKluwer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>