force-app/main/default/objects/Ecosystem__c/fields/Tax_Commissions_Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Tax_Commissions_Lockbox__c</fullName>
    <label>Tax | Commissions | Lockbox</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Avalara AvaTax</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>BB&amp;T</fullName>
            </value>
            <value>
                <fullName>CallidusCloud</fullName>
            </value>
            <value>
                <fullName>CCH proSystem fx Tax</fullName>
            </value>
            <value>
                <fullName>Chase Bank</fullName>
            </value>
            <value>
                <fullName>Corptax</fullName>
            </value>
            <value>
                <fullName>Iconixx</fullName>
            </value>
            <value>
                <fullName>Longview</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>QCommission</fullName>
            </value>
            <value>
                <fullName>QuickBooks Desktop Pro</fullName>
            </value>
            <value>
                <fullName>TaxCloud</fullName>
            </value>
            <value>
                <fullName>TD Bank</fullName>
            </value>
            <value>
                <fullName>Thomson Reuters</fullName>
            </value>
            <value>
                <fullName>Turbotax Business</fullName>
            </value>
            <value>
                <fullName>UltraTax CS</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Vertex Cloud</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Xactly </fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>