force-app/main/default/objects/Ecosystem__c/fields/Usage_Processing__c.field-meta.xml
<CustomField>
    <fullName>Usage_Processing__c</fullName>
    <label>Usage Processing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Custom -</fullName>
            </value>
            <value>
                <fullName>Amdocs</fullName>
            </value>
            <value>
                <fullName>Aria</fullName>
            </value>
            <value>
                <fullName>Avangate</fullName>
            </value>
            <value>
                <fullName>Braintree Payments</fullName>
            </value>
            <value>
                <fullName>Chargebee</fullName>
            </value>
            <value>
                <fullName>Chargify</fullName>
            </value>
            <value>
                <fullName>Ericsson</fullName>
            </value>
            <value>
                <fullName>FastSpring</fullName>
            </value>
            <value>
                <fullName>Fusebill</fullName>
            </value>
            <value>
                <fullName>GoTransverse</fullName>
            </value>
            <value>
                <fullName>Kugamon</fullName>
            </value>
            <value>
                <fullName>Recurly</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Worldplay</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>