force-app/main/default/objects/Ecosystem__c/listViews/Default_View.listView-meta.xml
<ListView>
    <fullName>Default_View</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_and_Collections__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Default View</label>
</ListView>