force-app/main/default/objects/Ecosystem__c/listViews/Ecosystem_List_View.listView-meta.xml
<ListView>
    <fullName>Ecosystem_List_View</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Billing_and_Collections__c</columns>
    <columns>CPQ__c</columns>
    <columns>Financial_Management_and_RevRec__c</columns>
    <columns>Invoice_Finishing_Delivery__c</columns>
    <columns>Middleware_Connectivity__c</columns>
    <columns>Payment_Processing__c</columns>
    <columns>Tax__c</columns>
    <columns>Tax_Commissions_Lockbox__c</columns>
    <columns>Usage_Processing__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financial_Management_and_RevRec__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Ecosystem List View DH</label>
</ListView>